# classification_cat_dog

./: README.md  example_notebook.ipynb  pyproject.toml  requirements.txt
inference/: __init__.py  inference.ipynb  inference.py  inference_notebook.ipynb  utils_inference.py
train/: __init__.py  data_exploration.ipynb  train.py  training.ipynb
