[project]
name = "classification-cat-dog"
version = "0.1.0"
description = "Small project"
authors = [
    {name = "JannikW",email = "96748097+WJannik@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[dependency-groups]
dev = [
    "numpy (>=2.3.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
